refactor: 댓글/대댓글 생성 시 User 객체 직접 전달 방식으로 통일 및 중복 로직 정리